--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-web",
+  "name": "FrontendApp",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ECommerceWeb": "node dist/ecommerce-web/server/server.mjs"
+    "serve:ssr:FrontendApp": "node dist/frontend-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
