--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:FrontendApp": "node dist/frontend-app/server/server.mjs"
+    "serve:ssr:ECommerceWeb": "node dist/ecommerce-web/server/server.mjs"
   },
   "private": true,
   "dependencies": {
